--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,8 @@
 <body>
 
 <%= render 'shared/header' %>
-<div class="row">
-  <div class="col-xs-6 col-md-offset-3">
-    <% if notice.present? %>
-      <p class="alert alert-success"><%= notice %></p>
-    <% end %>
-    <% if alert.present? %>
-      <p class="alert alert-danger"><%= alert %></p>
-    <% end %>
-  </div>
-</div>
+<%= render 'shared/notice_and_alert' %>
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-8"><%= yield %></div>
