--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -19,8 +19,8 @@
         <li><%= link_to "Help",     help_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Avatar" %></li>
-        <li><%= link_to "Full Name" %></li>
+      <% if user_signed_in? %>
+        <li><%= link_to current_user.email %></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
             aria-expanded="false">Account <span class="caret"></span>
@@ -31,9 +31,13 @@
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
+      <% else %>
+        <!-- <li><%= link_to "Sign up", new_user_registration_path %></li> -->
+        <li><%= link_to "Login", new_user_session_path %></li>
+      <% end %>
       </ul>
     </div>
   </div>
