Restict user's role with take courses

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,3 +4,15 @@
 body {
   padding-top: 60px;
 }
+
+select {
+  border: 1px solid #BDBDBD;
+  width: 50%;
+  padding: 5px;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.login-penal {
+  margin-top: 100px;
+}
