--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,34 +8,31 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <li><%= link_to "Rails Application", "/", class: "navbar-brand"  %></li>
+      <li><%= link_to "Rails Online Assignment Submission", "/", class: "navbar-brand"  %></li>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav ">
-        <li class="active"><%= link_to "Home", "/" %><span class="sr-only">(current)</span></li>
-        <li><%= link_to "About",    about_path %></li>
-        <li><%= link_to "Contact",  contact_path %></li>
-        <li><%= link_to "News",     news_path %></li>
-        <li><%= link_to "Help",     help_path %></li>
+        <%= render 'shared/top_nav1' %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-      <% if user_signed_in? %>
-        <li><%= link_to current_user.email %></li>
+        <% if user_signed_in? %>
+          <%= render 'shared/username_email' %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
             aria-expanded="false">Account <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Something else here</a></li>
+          <% if @user.username.present? %>
+            <li><%= link_to current_user.email %></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+          <% end %>
+            <li><%= link_to "Profile", user_path(@user) %></li>
+            <li><%= link_to "Setting", edit_user_registration_path %></li>
             <li role="separator" class="divider"></li>
             <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
           </ul>
         </li>
       <% else %>
-        <!-- <li><%= link_to "Sign up", new_user_registration_path %></li> -->
         <li><%= link_to "Login", new_user_session_path %></li>
       <% end %>
       </ul>
