--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="col-xs-6">
 <%= form_for(@course) do |f| %>
   <% if @course.errors.any? %>
     <div id="error_explanation">
@@ -11,15 +13,11 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br>
-    <%= f.text_field :user_id %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <%= f.text_field :title, class: "form-control", placeholder: "Enter Course Title" %>
+  <br>
+    <%= f.submit "Add Course", class: "btn btn-primary" %>
+    <%= link_to 'Back', courses_path, class: "btn btn-default" %>
+
 <% end %>
+  </div>
+</div>
