--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,12 +1,9 @@
-<p id="notice"><%= notice %></p>
+<h2>Listing Courses</h2>
 
-<h1>Listing Courses</h1>
-
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,10 +12,10 @@
     <% @courses.each do |course| %>
       <tr>
         <td><%= course.title %></td>
-        <td><%= course.user %></td>
-        <td><%= link_to 'Show', course %></td>
-        <td><%= link_to 'Edit', edit_course_path(course) %></td>
-        <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', course, class: "btn btn-primary" %>
+        <%= link_to 'Edit', edit_course_path(course), class: "btn btn-success" %>
+        <%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' },
+                                                                class: "btn btn-danger" %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Course', new_course_path %>
+<%= link_to 'New Course', new_course_path, class: "btn btn-default" %>
