--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <li><%= link_to "Rails Online Assignment Submission", "/", class: "navbar-brand"  %></li>
+      <li><%= link_to "ROAS", "/", class: "navbar-brand"  %></li>
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav ">
