--- a/app/views/shared/_username_email.html.erb
+++ b/app/views/shared/_username_email.html.erb
@@ -1,5 +1,5 @@
 <% if @user.username.present? %>
-  <li><%= link_to current_user.username %></li>
+  <li><%= link_to current_user.username, current_user %></li>
 <% else %>
   <li><%= link_to current_user.role.titleize %></li>
   <li><%= link_to current_user.email %></li>
