--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -40,13 +40,16 @@
   </tbody>
 </table>
 <% else %>
+
 <!-- Other then Admin Users -->
+
 <table class="table">
   <thead>
     <tr>
       <th>Name</th>
       <th>Email</th>
       <th>Course</th>
+      <th>Session</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -62,11 +65,24 @@
                 <%= take.course.title %><br />
               <% end %>
             </td>
+            <% if user.sessionenrolls.exists? %>
+              <td>
+                <% user.sessionenrolls.each do |enroll| %>
+                  <%= enroll.coursesession.name %>
+                <% end %>
+              </td>
+            <% else %>
+            <% if current_user == user %>
+              <td><%= link_to "Enroll", sessionenrolls_path, class: "btn btn-default" %></td>
+            <% end %>
+            <% end %>
             <% if user.role == "teacher" %>
               <td><%= link_to "Other Course", takes_path, class: "btn btn-default" %></td>
             <% end -%>
           <% else %>
+            <% if current_user == user %>
             <td><%= link_to "Select Course", takes_path, class: "btn btn-default" %></td>
+            <% end %>
           <% end %>
           <td>
             <span class="btn-group btn-group-sm" role="group">
